--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>Azzardo italiano</h1>
-    <object data="svg/italia_regioni-province-comuni.svg" type="image/svg+xml" id="svg_azzardo" width="100%" height="100%"></object>
+    <object data="svg/italia_regioni-province-comuni.svg" type="image/svg+xml" id="svg_azzardo" width=600 height=750></object>
+    <div>
+    <button onclick="set_mode('raccolta_procapite');">Spesa Pcpt</button>
+    <button onclick="set_mode('reddito_procapite');">Reddito Pcpt</button>
+    </div>
 </body>
     <script src="js/script.js"></script>
 </html>
