Added population and raccolta/reddito rateo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div>
     <button onclick="set_mode('raccolta_procapite');">Spesa Pcpt</button>
     <button onclick="set_mode('reddito_procapite');">Reddito Pcpt</button>
+    <button onclick="set_mode('popolazione');">Popolazione</button>
+    <button onclick="set_mode('rateo_raccolta_reddito_2016');">Raccolta/Reddito Pcpt</button>
     </div>
 </body>
     <script src="js/script.js"></script>
